Kubernetes/05-dtps/02-dtps-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dtps-ingress
  namespace: dt
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"

spec:
  rules:
  - http:
      paths:
      - path: /dtps(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: dtps-svc
            port:
              number: 8000
